improved accessibility in the glossary: separated link to wikipedia to avoid empty links resulting in 404 server response; increased contrast in text, links and tags;

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -30,7 +30,7 @@
 /* pre-defined font colors */
 .c-white {color: rgb(253, 253, 253) !important;}
 .c-text {color: var(--c-text) !important;}
-.c-header {color: var(--c-header) !important;}
+.c-header {color: var(--sitemap-0) !important;}
 .c-gray {color: var(--c-gray) !important;}
 .c-pros {color: var(--c-pros) !important;}
 .c-good {color: var(--c-note) !important;}
